trunk/Archive2/fc/2f6e0496c1f6a0/output
main.cpp:236:99: error: unknown type name 'C'
        explicit        snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                                                                                                                ^
main.cpp:236:100: error: expected ')'
        explicit        snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                                                                                                                 ^
main.cpp:236:16: note: to match this '('
        explicit        snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                             ^
main.cpp:236:97: error: expected '>'
        explicit        snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                                                                                                              ^
main.cpp:250:14: error: out-of-line definition of 'snake<R, C>' does not match any declaration in 'snake<R, C>'
snake<R, C>::snake(typename sob::bitboard<R, C>::cell cell, const sob::bitboard<R, C>& bb) :
             ^~~~~
4 errors generated.
